adjust heading center

--- a/index.html
+++ b/index.html
@@ -118,17 +118,11 @@
             <div class="row">
               <div class="container">
                 <div class="row top-text">
-                  <div class="offset-xl-4 col-xl-12">
+                  <div class="col-xl-12">
                     <p style="color: white">
                       Fall Asleep Faster, Stay Asleep Longer
                     </p>
-                  </div>
-                </div>
-              </div>
-              <div class="container">
-                <div class="row top-center">
-                  <div class="offset-xl-6 col-xl-3">
-                    <p style="color: white">without waking up groggy.</p>
+                     <p class="top-center">without waking up groggy.</p>
                   </div>
                 </div>
               </div>
